objects/APTPS_Agreement_Account_Sites__c.object
<CustomObject>
    <description>Account sites of an agreement</description>
    <fields>
        <fullName>APTPS_Account_Sites_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Sites Id</label>
        <referenceTo>Account_Sites__c</referenceTo>
        <relationshipLabel>Agreement Account Sites</relationshipLabel>
        <relationshipName>Agreement_Account_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_County__c</fullName>
        <formula>Account__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Account Sites</relationshipLabel>
        <relationshipName>Agreement_Account_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Account Sites</relationshipLabel>
        <relationshipName>Agreement_Account_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Opportunity__c</fullName>
        <label>Create Opportunity</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>IF(!ISBLANK(Overridden_Full_Address__c),Overridden_Full_Address__c, Address__c  &amp; IF(Address__c &lt;&gt; &quot;&quot;, &quot;, &quot;,&quot;&quot;) &amp;  City__c  &amp; IF(City__c &lt;&gt; &quot;&quot;, &quot;, &quot;,&quot;&quot;) &amp; Account_County__c &amp; IF(Account_County__c &lt;&gt; &quot;&quot;, &quot;, &quot;,&quot;&quot;) &amp;  State__c  &amp; IF(State__c  &lt;&gt; &quot;&quot;, &quot;, &quot;,&quot;&quot;) &amp; Zip_Code__c &amp; IF(Zip_Code__c &lt;&gt; &quot;&quot;, &quot;, &quot;,&quot;&quot;) &amp;  Country__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overridden_Full_Address__c</fullName>
        <label>Full Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Account Sites (Parent Account)</relationshipLabel>
        <relationshipName>Agreement_Account_Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Agreement Account Sites</label>
    <nameField>
        <displayFormat>AAS-{00000}</displayFormat>
        <label>Agreement Account Sites Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Account Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>